--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ $ Knowledge:
     <footer class="bg-black p-4 mt-8">
         <div class="container mx-auto text-center text-black">
             <div class="flex items-center justify-center mb-4">
-                <a href="#web-dev-section" class="mx-2 footer-icon">
+                <a href="https://github.com/Kushal129" class="mx-2 footer-icon">
                     <img src="img/logo/git.png" alt="GitHub" class="w-6 h-auto logo-green">
                 </a>
                 <a href="https://www.linkedin.com/in/kushal-pipaliya" target="_blank" class="mx-2 footer-icon">
