--- a/index.html
+++ b/index.html
@@ -111,8 +111,6 @@
 
         <hr>
     </div>
-
-<<<<<<< HEAD
     <div class="container mx-auto p-8 flex flex-col md:flex-row">
         <!-- Web Developer Section -->
         <div class="flex-1 mb-8 md:mr-6">
@@ -128,7 +126,7 @@
                     into the basics of back-end development. My journey involves continuous learning, hands-on practice,
                     and a genuine curiosity to understand the intricacies of web development.
                     Join me as I embark on this exciting adventure in the realm of coding!
-                </p>
+                </p>git 
 
             </div>
             <div>
@@ -146,8 +144,7 @@
     - Servlet
     - Mysql
     - and much more<span class="animate-blink-dot text-gray-400">.</span><span class="animate-blink-dot text-gray-400">.</span><span class="animate-blink-dot text-gray-400">.</span>
-                </div>
-=======
+</div>
     <footer class="bg-black p-4 mt-8">
         <div class="container mx-auto text-center text-black">
             <div class="flex items-center justify-center mb-4">
@@ -277,10 +274,13 @@
                         <img src="img/logo/email.png" alt="Email" class="w-6 h-auto logo-green">
                     </a>
                 </div>
-                <p class="text-sm text-[#049309]">&copy; Copyright by Kushal Pipaliya <span id="currentYear"></span> All rights reserved.
+                <p class="text-sm text-[#049309]">&copy; Copyright by Kushal Pipaliya <span id="currentYear"></span> All
+                    rights reserved.
                 </p>
             </div>
-            <div class="before:absolute before:inset-x-0 before:top-0 before:h-6 before:bg-gradient-to-t before:from-green-500 before:to-transparent before:opacity-30"></div>
+            <div
+                class="before:absolute before:inset-x-0 before:top-0 before:h-6 before:bg-gradient-to-t before:from-green-500 before:to-transparent before:opacity-30">
+            </div>
         </footer>
     </div>
 
