--- a/index.html
+++ b/index.html
@@ -7,106 +7,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
+
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="styles.css">
     <title>Kushal Portfolio</title>
-    <style>
-        body {
-            scroll-behavior: smooth;
-            color: #049309;
-        }
-
-        ::selection {
-            background-color: rgb(6, 104, 3) !important;
-            color: rgb(0, 0, 0) !important;
-        }
-
-        body::-webkit-scrollbar {
-            width: 2px;
-            height: 5px;
-        }
-
-        body::-webkit-scrollbar-thumb {
-            background-color: #035e03;
-            border-radius: 6px;
-        }
-
-        body::-webkit-scrollbar-track {
-            background-color: #d3c9e300;
-        }
-
-        body::-webkit-scrollbar-thumb:hover {
-            background-color: #f3f5f3;
-        }
-
-        .fade-in {
-            opacity: 0;
-            transform: translateY(20px);
-            transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-        }
-
-        .fade-in.visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        .animate-binary-code {
-            animation: binary-code 1.5s infinite;
-        }
-
-        .footer-icon:hover {
-            transform: scale(1.3);
-            transition: transform 0.3s ease;
-        }
-
-        #element-p {
-            color: rgb(138, 1, 1);
-        }
-
-        @keyframes blink-dot {
-
-            0%,
-            24.9%,
-            100% {
-                opacity: 0;
-            }
-
-            25%,
-            49.9% {
-                opacity: 1;
-            }
-        }
-
-        .animate-blink-dot {
-            animation: blink-dot 1s infinite;
-        }
-
-        .hr-container {
-            position: relative;
-        }
-
-        .hr-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(to right, transparent, #00ff00);
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
-
-        .hr-container:hover .hr-overlay {
-            opacity: 1;
-        }
-    </style>
 </head>
 
 <body class="bg-black">
-
+    <div id="loader" class="center"></div>  
     <!-- Main Content -->
     <div class="container mx-auto p-8">
         <div class="flex flex-wrap items-center justify-center">
-            <div class="w-full md:w-1/2 lg:w-1/2 p-4 fade-in">
+            <div class="w-full md:w-1/2 lg:w-1/2 p-4 ">
 
                 <div class="text-center md:text-left overflow-hidden">
                     <h1 id="element"
@@ -117,14 +31,14 @@
                     </p>
                 </div>
             </div>
-            <div class="w-full md:w-1/2 lg:w-1/2 p-4 fade-in">
+            <div class="w-full md:w-1/2 lg:w-1/2 p-4">
                 <img src="img/fmy2.png" alt="Your Image" class="w-full h-auto rounded-md mb-4">
             </div>
         </div>
         <hr>
         <div class="items-center justify-center text-center mt-3 fade-in">
-            <div id="hackerMotivation" class="text-5xl font-mono animate-binary-code mb-4">
-                HACK YOUR LIFE WORK HARD, CODE SMART
+            <div id="hackerMotivation" class="text-4xl font-mono animate-binary-code mb-4">
+                HACK YOUR LIFE : WORK HARD : CODE SMART
             </div>
         </div>
 
@@ -132,8 +46,7 @@
     </div>
 
     <div class="container mx-auto p-8 flex flex-col md:flex-row">
-        <!-- Web Developer Section -->
-        <div class="flex-1 mb-8 md:mr-6">
+        <div class="flex-1 mb-8 md:mr-6 fade-in">
             <div class="mb-4">
                 <h1 class="text-3xl font-bold mb-2">$ dir /a</h1>
                 <h1 class="text-3xl font-bold mb-2 mt-3">Creative Developer</h1>
@@ -150,8 +63,7 @@
 
             </div>
             <div>
-                <!-- <h2 class="text-xl font-semibold mb-2">$ cd \Skills</h2> -->
-                <div class="border border-green-700 p-2 rounded-md bg-zinc-950">
+                <div class="border border-green-700 p-2 rounded-md bg-zinc-950 fade-in">
                     <pre class="p-3 text-left text-white">
 <span class="text-red-700">$</span><span class="text-violet-800">root:\cd\Skills</span>
     - HTML5
@@ -168,8 +80,8 @@
             </div>
         </div>
 
-        <!-- Ethical Hacker Section -->
-        <div class="flex-1">
+<!-- Ethical Hacker Section -->
+        <div class="flex-1 fade-in">
             <div class="mb-4">
                 <h1 class="text-3xl font-bold mb-2">$ ls -a</h1>
                 <h1 class="text-3xl font-bold mb-2 mt-3">Ethical Hacker</h1>
@@ -179,8 +91,7 @@
                 </p>
             </div>
             <div>
-                <!-- <h2 class="text-xl font-semibold mb-2">$ cd /Knowledge</h2> -->
-                <div class="border-1 p-2 rounded-md bg-zinc-950">
+                <div class="border-1 p-2 rounded-md bg-zinc-950 fade-in">
                     <pre class="p-3 text-left text-white">
 <span class="text-red-700">root@BlueMen:~</span><span class="text-violet-800"># cd /Skills</span>
 - Cybersecurity Basics
@@ -205,124 +116,83 @@
             </div>
         </div>
     </div>
-
-    <hr>
     <!-- Project Details -->
-    <div class="flex items-center justify-center h-screen bg-black">
-        <div class="text-white text-center pr-4">
-            <h2 class="text-3xl font-bold mb-4">My Work</h2>
-            <div class="grid grid-cols-2 gap-4 md:grid-cols-4 lg:grid-cols-6">
+    <div class="flex items-center justify-center h-screen fade-in">
+        <div class="laptop-container p-1 max-w-screen-md w-full">
+            <div class="flex items-center justify-center bg-black ">
+                <div class="text-white text-center p-5 pr-4">
+                    <h2 class="text-3xl font-serif mb-4">My Work</h2>
+                    <div class="grid grid-cols-2 gap-4 md:grid-cols-4 lg:grid-cols-6">
+                        <div class="mx-auto transform transition-transform hover:scale-110 fade-in">
+                            <img class="w-16 h-16 mb-2 rounded-full shadow-md"
+                                src="https://cdn.worldvectorlogo.com/logos/c--4.svg" alt="C#">
+                            <p class="text-xs">C#</p>
+                        </div>
 
-                <div class="mx-auto transform transition-transform hover:scale-110 fade-in">
-                    <img class="w-16 h-16 mb-2 rounded-full shadow-md"
-                        src="https://cdn.worldvectorlogo.com/logos/c--4.svg" alt="C#">
-                    <p class="text-xs">C#</p>
-                </div>
+                        <div class="mx-auto transform transition-transform hover:scale-110 fade-in">
+                            <img class="w-16 h-16 mb-2 rounded-full shadow-md" src="img/logo/hcj.png" alt="HTML/CSS/JS">
+                            <p class="text-xs">HTML/CSS/JS</p>
+                        </div>
 
-                <div class="mx-auto transform transition-transform hover:scale-110 fade-in">
-                    <img class="w-16 h-16 mb-2 rounded-full shadow-md" src="img/logo/hcj.png" alt="HTML/CSS/JS">
-                    <p class="text-xs">HTML/CSS/JS</p>
-                </div>
+                        <div class="mx-auto transform transition-transform hover:scale-110 fade-in">
+                            <img class="w-16 h-16 mb-2 rounded-full shadow-md" src="img/logo/php.png" alt="PHP">
+                            <p class="text-xs">PHP</p>
+                        </div>
 
-                <div class="mx-auto transform transition-transform hover:scale-110 fade-in">
-                    <img class="w-16 h-16 mb-2 rounded-full shadow-md" src="img/logo/php.png" alt="PHP">
-                    <p class="text-xs">PHP</p>
-                </div>
+                        <div class="mx-auto transform transition-transform hover:scale-110 fade-in">
+                            <img class="w-16 h-16 mb-2 rounded-full shadow-md" src="img/logo/asp.png" alt="ASP.NET">
+                            <p class="text-xs">.NET</p>
+                        </div>
 
-                <div class="mx-auto transform transition-transform hover:scale-110 fade-in">
-                    <img class="w-16 h-16 mb-2 rounded-full shadow-md" src="img/logo/asp.png" alt="ASP.NET">
-                    <p class="text-xs">.NET</p>
-                </div>
+                        <div class="mx-auto transform transition-transform hover:scale-110 fade-in">
+                            <img class="w-16 h-16 mb-2 rounded-full shadow-md"
+                                src="https://cdn.worldvectorlogo.com/logos/java-4.svg" alt="Java">
+                            <p class="text-xs">Java</p>
+                        </div>
 
-                <div class="mx-auto transform transition-transform hover:scale-110 fade-in">
-                    <img class="w-16 h-16 mb-2 rounded-full shadow-md"
-                        src="https://cdn.worldvectorlogo.com/logos/java-4.svg" alt="Java">
-                    <p class="text-xs">Java</p>
-                </div>
-
-                <div class="mx-auto transform transition-transform hover:scale-110 fade-in">
-                    <img class="w-16 h-16 mb-2 rounded-full shadow-md" src="img/logo/python.png" alt="Python">
-                    <p class="text-xs">Python</p>
+                        <div class="mx-auto transform transition-transform hover:scale-110 fade-in">
+                            <img class="w-16 h-16 mb-2 rounded-full shadow-md" src="img/logo/python.png" alt="Python">
+                            <p class="text-xs">Python</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="relative">
-    <footer class="bg-black p-4 mt-8">
-        <div class="mx-auto text-center p-5 text-black z-10 relative">
-            <div class="flex items-center justify-center mb-4">
-                <a href="#web-dev-section" class="mx-2 footer-icon">
-                    <img src="img/logo/git.png" alt="GitHub" class="w-6 h-auto logo-green">
-                </a>
-                <a href="https://www.linkedin.com/in/kushal-pipaliya" target="_blank" class="mx-2 footer-icon">
-                    <img src="img/logo/linkd.png" alt="LinkedIn" class="w-6 h-auto logo-green">
-                </a>
-                <a href=https://www.instagram.com/_kushal_pipaliya/"" target="_blank" class="mx-2 footer-icon">
-                    <img src="img/logo/insta.png" alt="Instagram" class="w-6 h-auto logo-green">
-                </a>
-                <a href="https://www.facebook.com/kushal.pipaliya.12?mibextid=JRoKGi" target="_blank"
-                    class="mx-2 footer-icon">
-                    <img src="img/logo/fb.png" alt="Facebook" class="w-6 h-auto logo-green">
-                </a>
-                <a href="https://twitter.com/PipaliyaKu78237" target="_blank" class="mx-2 footer-icon">
-                    <img src="img/logo/twt.png" alt="Twitter" class="w-6 h-auto logo-green">
-                </a>
-                <a href="mailto:21bmiit129@email.com" class="mx-2 footer-icon">
-                    <img src="img/logo/email.png" alt="Email" class="w-6 h-auto logo-green">
-                </a>
+    <div class="relative fade-in">
+        <footer class="bg-black p-4 mt-8 animate-pulse">
+            <div class="mx-auto text-center p-5 text-black z-10 relative">
+                <div class="flex items-center justify-center mb-4">
+                    <a href="https://www.github.com/Kushal129" class="mx-2 footer-icon">
+                        <img src="img/logo/git.png" alt="GitHub" class="w-6 h-auto logo-green">
+                    </a>
+                    <a href="https://www.linkedin.com/in/kushal-pipaliya" target="_blank" class="mx-2 footer-icon">
+                        <img src="img/logo/linkd.png" alt="LinkedIn" class="w-6 h-auto logo-green">
+                    </a>
+                    <a href=https://www.instagram.com/_kushal_pipaliya/"" target="_blank" class="mx-2 footer-icon">
+                        <img src="img/logo/insta.png" alt="Instagram" class="w-6 h-auto logo-green">
+                    </a>
+                    <a href="https://www.facebook.com/kushal.pipaliya.12?mibextid=JRoKGi" target="_blank"
+                        class="mx-2 footer-icon">
+                        <img src="img/logo/fb.png" alt="Facebook" class="w-6 h-auto logo-green">
+                    </a>
+                    <a href="https://twitter.com/PipaliyaKu78237" target="_blank" class="mx-2 footer-icon">
+                        <img src="img/logo/twt.png" alt="Twitter" class="w-6 h-auto logo-green">
+                    </a>
+                    <a href="mailto:kushalhpipaliya01@email.com" class="mx-2 footer-icon">
+                        <img src="img/logo/email.png" alt="Email" class="w-6 h-auto logo-green">
+                    </a>
+                </div>
+                <p class="text-sm text-[#049309]">&copy; Copyright by Kushal Pipaliya <span id="currentYear"></span> All
+                    rights
+                    reserved.
+                </p>
             </div>
-            <p class="text-sm text-[#049309]">&copy; Copyright by Kushal Pipaliya <span id="currentYear"></span> All
-                rights
-                reserved.
-            </p>
-        </div>
-        <div
-            class="before:absolute before:inset-x-0 before:top-0 before:h-6 before:bg-gradient-to-t before:from-green-500 before:to-transparent before:opacity-30">
-        </div>
-    </footer>
-
-    <script>
-        document.getElementById("currentYear").innerText = new Date().getFullYear();
-
-        document.addEventListener('scroll', function () {
-            var fadeIns = document.querySelectorAll('.fade-in');
-
-            fadeIns.forEach(function (fadeIn) {
-                if (isElementVisible(fadeIn)) {
-                    fadeIn.classList.add('visible');
-                }
-            });
-        });
-
-        function isElementVisible(el) {
-            var rect = el.getBoundingClientRect();
-            var windowHeight = window.innerHeight || document.documentElement.clientHeight;
-            return !(rect.bottom < 0 || rect.top - windowHeight >= 0);
-        }
-    </script>
-
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-
-
-    <script>
-        var typed = new Typed('#element', {
-            strings: ['Kushal Pipaliya'],
-            typeSpeed: 50,
-            lifeLike: true,
-            startDelay: 500,
-            cursor: true,
-        });
-        var typed = new Typed('#element-p', {
-            strings: ['Web Developer.', 'Ethical Hacker.', 'Web Designer', 'Web Developer.', 'Ethical Hacker.'],
-            typeSpeed: 60,
-            lifeLike: true,
-            startDelay: 500,
-            cursor: true,
-        });
-        var style = document.createElement('style');
-        style.innerHTML = '.typed-cursor { display: none; }';
-        document.head.appendChild(style);
-    </script>
+            <div
+                class="before:absolute before:inset-x-0 before:top-0 before:h-6 before:bg-gradient-to-t before:from-green-500 before:to-transparent before:opacity-30">
+            </div>
+        </footer>
+        <script src="script.js"></script>
 </body>
 
 </html>
