--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                     </p>
                 </div>
             </div>
-            <div class="w-full md:w-1/2 lg:w-1/2 p-4">
+            <div class="w-full md:w-1/2 lg:w-1/2 p-4 fade-in">
                 <img src="img/fmy2.png" alt="Your Image" class="w-full h-auto rounded-md mb-4">
             </div>
         </div>
-        <hr>
+        <hr class="fade-in">
         <div class="items-center justify-center text-center mt-3 fade-in">
             <div id="hackerMotivation" class="text-4xl font-mono animate-binary-code mb-4">
                 HACK YOUR LIFE : WORK HARD : CODE SMART
