--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </p>
                 </div>
             </div>
-            <div class="w-full md:w-1/2 lg:w-1/2 p-4 fade-in">
+            <div class="w-full md:w-1/2 lg:w-1/2 p-4">
                 <img src="img/fmy2.png" alt="Your Image" class="w-full h-auto rounded-md mb-4">
             </div>
         </div>
@@ -40,7 +40,7 @@
                 HACK YOUR LIFE : WORK HARD : CODE SMART
             </div>
         </div>
-        <hr>
+        <hr class="fade-in">
     </div>
 
     <div class="container mx-auto p-8 flex flex-col md:flex-row">
