--- a/index.html
+++ b/index.html
@@ -340,7 +340,9 @@
                                     IN</span></p>
                             <p class="text-1xl mb-2">Phone: <a href="tel:+919574476496" class="text-gray-500">+91
                                     9574476496</a></p>
-                            <p class=" mb-2">Email: <a href="mailto:kushalhpipaliya01@gmail.com"
+                           <p class=" mb-2">Email: <a href="mailto:kushalhpipaliya01@gmail.com"
+    class="text-[#237d07] hover:text-green-500">kushalhpipaliya01@gmail.com</a></p>
+
                                     class="text-gray-500">kushalhpipaliya01@gmail.com</a></p>
                         </div>
                     </div>
