--- a/index.html
+++ b/index.html
@@ -332,18 +332,15 @@
                             </div>
                         </form>
                     </div>
-
                     <div class="w-full md:w-1/3 px-4">
                         <div class="bg-black p-8 rounded shadow-md">
                             <h3 class="text-2xl font-semibold mb-4">KUSHAL PIPALIYA</h3>
-                            <p class="text-1xl mb-2">Address: <span class="text-gray-500 ">Katargam, Surat, Gujarat,
-                                    IN</span></p>
-                            <p class="text-1xl mb-2">Phone: <a href="tel:+919574476496" class="text-gray-500">+91
-                                    9574476496</a></p>
-                            <p class=" mb-2">Email: <a href="mailto:kushalhpipaliya01@gmail.com"
-                                    class="text-gray-500">kushalhpipaliya01@gmail.com</a></p>
+                            <p class="text-1xl mb-2">Address: <a class="text-gray-500 hover:text-white focus:text-[#237d07]" href="https://maps.app.goo.gl/sKMHbJfC7rdbQHNU7">Katargam, Surat, Gujarat, IN</a></p>
+                            <p class="text-1xl mb-2">Phone: <a href="tel:+919574476496" class="text-gray-500 hover:text-white focus:text-[#237d07]">+91 9574476496</a></p>
+                            <p class="mb-2">Email: <a href="mailto:kushalhpipaliya01@gmail.com" class="text-gray-500 hover:text-white focus:text-[#237d07]">kushalhpipaliya01@gmail.com</a></p>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </div>
