--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <h2 class="text-lg font-bold text-gray-600 mb-2">10th (Secondary School Examination)</h2>
                 <span class="text-gray-300">Gujarat Secondary and Higher Secondary Education Board</span>
                 <p class="text-gray-300 mt-4">Achieved remarkable success in the 10th board (SSC) exam, securing an
-                    impressive 79% overall in studies at Gujarat Secondary and Higher Secondary Board (Late D D Radadiya
+                    impressive 79% overall in studies at Gujarat Secondary and Higher Secondary Board (D D Radadiya
                     Vidhyalaya Gujarati Medium Schools Schools).</p>
                 <p class="text-gray-300 mt-4">Demonstrates commitment to academic excellence and a strong foundation in
                     various subjects.</p>
