--- a/index.html
+++ b/index.html
@@ -326,9 +326,7 @@
                             </div>
 
                             <div class="mb-4">
-                                <button type="submit"
-                                    class="bg-[#237d07] text-white py-2 px-4 rounded hover:bg-green-800">Send
-                                    Message</button>
+                                <button type="submit" class="bg-[#237d07] text-white py-2 px-4 rounded hover:bg-green-800">Send Message</button>
                             </div>
                         </form>
                     </div>
@@ -345,9 +343,6 @@
             </div>
         </div>
     </section>
-
-
-
 
     <div class="relative fade-in">
         <section class="bg-black p-8 mt-8 section" id="contact-section">
