email submit add

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             <div class="container mx-auto bg-black mt-10 p-4">
                 <div class="flex flex-wrap -mx-4">
                     <div class="w-full md:w-2/3 px-4 mb-8">
-                        <form action="https://formspree.io/f/xnqedqen" method="post" onsubmit="return handleFormSubmission(event)" class="bg-black p-8 rounded shadow-md">
+                        <form action="https://formspree.io/f/xnqedqen" method="post" class="bg-black p-8 rounded shadow-md">
                             <div class="mb-4">
                                 <label for="name" class="block text-1xl font-bold mb-2">Your Name:</label>
                                 <input type="text" id="name" name="name" placeholder="John Doe"
