uppercase data convert

--- a/index.html
+++ b/index.html
@@ -304,17 +304,17 @@
             <div class="container mx-auto bg-black mt-10 p-4">
                 <div class="flex flex-wrap -mx-4">
                     <div class="w-full md:w-2/3 px-4 mb-8">
-                        <form action="https://formspree.io/f/xnqedqen" method="post" class="bg-black p-8 rounded shadow-md">
+                        <form action="https://formspree.io/f/xnqedqen" method="post"  class="bg-black p-8 rounded shadow-md"  onsubmit="convertToUpperCase()">
                             <div class="mb-4">
                                 <label for="name" class="block text-1xl font-bold mb-2">Your Name:</label>
-                                <input type="text" id="name" name="name" placeholder="John Doe"
+                                <input type="text" id="name" name="name" autocomplete="off" placeholder="KH....."
                                     class="w-full px-3 py-2 border-2 rounded shadow-md bg-black text-[#237d07] focus:outline-none focus:border-green-500 focus:ring-0">
                             </div>
 
                             <div class="mb-4">
                                 <label for="email" class="block text-1xl font-bold mb-2">Your
                                     Email:</label>
-                                <input type="email" id="email" name="email" placeholder="john@example.com"
+                                <input type="email" id="email" name="email" placeholder="abc@example.com"
                                     class="w-full px-3 py-2 border-2 rounded shadow-md bg-black text-[#237d07] focus:outline-none focus:border-green-500 focus:ring-0">
                             </div>
 
