--- a/index.html
+++ b/index.html
@@ -378,6 +378,11 @@
             </div>
         </section>
     </div>
+
+	<div id="toaster" class="toaster">
+		<span id="message" class="message"></span>
+	</div>
+
     <script src="script.js"></script>
 </body>
 
