Email In Backend

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 <body class="bg-black">
     <div id="loader" class="center"></div>
     <!-- navbar  -->
-
     <nav class="nav fixed w-full z-10 transition duration-500 ease-in-out bg-red navbar" id="navbar">
         <div class="container mx-auto flex items-center justify-between p-2">
             <a href="#" class="font-bold text-xl text-[#237d07] hover:text-green-600">KH.Pipaliya</a>
@@ -304,7 +303,7 @@
             <div class="container mx-auto bg-black mt-10 p-4">
                 <div class="flex flex-wrap -mx-4">
                     <div class="w-full md:w-2/3 px-4 mb-8">
-                        <form action="https://formspree.io/f/xnqedqen" method="post"  class="bg-black p-8 rounded shadow-md"  onsubmit="convertToUpperCase()">
+                        <form action="#" method="post"  class="bg-black p-8 rounded shadow-md contact-form" id="contact-form" name="contact-form" onsubmit="convertToUpperCase()">
                             <div class="mb-4">
                                 <label for="name" class="block text-1xl font-bold mb-2">Your Name:</label>
                                 <input type="text" id="name" name="name" autocomplete="off" placeholder="KH....."
