--- a/index.html
+++ b/index.html
@@ -346,7 +346,6 @@
                             </p>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -390,11 +389,26 @@
     <div id="toaster" class="toaster">
         <span id="toast-message" class="message"></span>
     </div>
-
+    
     <script src="script.js"></script>
 </body>
+
 <script>
+   var toaster = document.getElementById('toaster');
+    var message = document.getElementById('toast-message');
     var form = document.getElementById("my-form");
+    var submitButton = form.querySelector("button[type='submit']");
+
+    
+    toaster.classList.add('hidden');
+
+    function showToaster(str) {
+        message.innerText = str || "Success! Your message has been sent.";
+        toaster.classList.remove('hidden');
+        setTimeout(function () {
+            toaster.classList.add('hidden');
+        }, 4000);
+    }
 
     async function handleSubmit(event) {
         event.preventDefault();
@@ -408,15 +422,19 @@
             }
         }).then(response => {
             if (response.ok) {
-                // status.innerHTML = "Thanks for your submission!";
-                showToaster("Thanks for Contacting us..! We Will Contact You Soon..!")
-                form.reset()
+                showToaster("Thanks for Contacting us..! We Will Contact You Soon..!");
+                form.reset();
             }
         }).catch(error => {
-            status.innerHTML = "Oops! There was a problem submitting your form"
+            status.innerHTML = "Oops! There was a problem submitting your form";
         });
     }
-    form.addEventListener("submit", handleSubmit)
+
+    form.addEventListener("submit", handleSubmit);
+
+    submitButton.addEventListener("click", function () {
+        showToaster("Please wait..."); // Display toaster when the button is clicked
+    });
 </script>
 
 </html>
