--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
+    <script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Kushal Portfolio</title>
 </head>
@@ -294,7 +295,7 @@
 
     <section class="ftco-section contact-section ftco-no-pb bg-black text-[#237d07]" id="contact-section">
         <div class="container">
-            <div class="row justify-content-center mb-5 pb-3">
+            <!-- <div class="row justify-content-center mb-5 pb-3">
                 <div class="col-md-7 heading-section text-center ftco-animate fadeInUp ftco-animated">
                     <h1 class="text-5xl">Contact</h1>
                     <p>Get in touch for collaboration, support, or any inquiries - let's bring your vision to life!</p>
@@ -347,7 +348,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
+            <div class="visme_d" data-title="portfolio" data-url="eprmwv11-portfolio" data-domain="forms" data-full-page="false" data-min-height="500px" data-form-id="15538"></div>
+        
+        
         </div>
     </section>
 
