--- a/index.html
+++ b/index.html
@@ -78,8 +78,6 @@
         <hr class="fade-in">
     </section>
 
-
-
     <section class="flex justify-center mt-5 mb-8 section" id="resume-section">
         <div class="max-w-2xl w-full mx-auto">
             <div class="text-center pb-5">
@@ -389,9 +387,9 @@
         </section>
     </div>
 
-    <div id="toaster" class="toaster">
+    <!-- <div id="toaster" class="toaster">
         <span id="toast-message" class="message"></span>
-    </div>
+    </div> -->
     
     <script src="script.js"></script>
 </body>
@@ -401,8 +399,6 @@
     var message = document.getElementById('toast-message');
     var form = document.getElementById("my-form");
     var submitButton = form.querySelector("button[type='submit']");
-
-    
     toaster.classList.add('hidden');
 
     function showToaster(str) {
