--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://kushalportfolio.vercel.app/">
+    <meta property="og:title" content="Kushal Pipaliya - Web Developer and Pentester">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="kushal,kushal-portfolio,KH,kushal-pipaliya,kushal-pipaliya-portfolio,web-developer, ethical-hacker, penetration ,HTML, CSS, JavaScript, cybersecurity, front-end developer, back-end developer, full-stack developer, web-design, responsive design, user experience, programming, coding, software development, web security, network security, penetration tester, white hat hacker, cybersecurity specialist, HTML5, CSS3, Bootstrap, Tailwind CSS, React, Java, C#, PHP, Python, .NET, MySQL, ASP.Net, Servlet, .NET Core, scripting, Linux, Windows, problem-solving, communication skills">
+    <meta name="description" content="Explore the impressive portfolio of Kushal Pipaliya, a skilled Web Developer and Ethical Hacker. With expertise in HTML, CSS, JavaScript, C#, Java, Python, and more, I am dedicated to creating innovative digital solutions. Delve into my journey through academia, including a Bachelor's Degree in B.Sc(IT), and discover a passion for cybersecurity. View my projects in HTML/CSS/JS, C#, PHP, .Net, Java, and Python. Connect with me for collaboration and let's code something amazing together!">
     <link rel="shortcut icon"
-        href="https://t4.ftcdn.net/jpg/03/89/91/73/360_F_389917362_x1ng8JcBsm22Nq4hnYzXkDyamqb20c1o.jpg"
-        type="image/x-icon">
+    href="https://t4.ftcdn.net/jpg/03/89/91/73/360_F_389917362_x1ng8JcBsm22Nq4hnYzXkDyamqb20c1o.jpg"
+    type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/scrollreveal@4/dist/scrollreveal.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -18,12 +22,10 @@
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
     <script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <title>Kushal Portfolio</title>
+    <title>Kushal Pipaliya - Web Developer and Pentester</title>
 </head>
-
 <body class="bg-black">
     <div id="loader" class="center"></div>
-    <!-- navbar  -->
     <nav class="nav fixed w-full z-10 transition duration-500 ease-in-out bg-red navbar" id="navbar">
         <div class="container mx-auto flex items-center justify-between p-2">
             <a href="#home-section" class="font-bold text-3xl text-[#237d07] hover:text-[#299f04]">KH.Pipaliya</a>
@@ -46,7 +48,6 @@
             </div>
         </div>
     </nav>
-
     <!-- Main Content -->
     <section class="container mx-auto p-8 section" id="home-section">
         <div class="flex flex-wrap mt-5 items-center justify-center">
@@ -70,12 +71,11 @@
                 </div>
             </div>
             <div class="w-full md:w-1/2 lg:w-1/2 p-4">
-                <img src="img/fmy2.png" alt="Your Image" class="w-full h-auto rounded-md mb-4">
+                <img src="img/fmy2.png" alt="Kushal Pipaliya - Web Developer and Pentester" class="w-full h-auto rounded-md mb-4">
             </div>
         </div>
     </section>
     <hr class="w-4/5 mx-auto fade-in mb-5">
-
     <section class="flex justify-center mt-5 mb-8 section" id="resume-section">
         <div class="max-w-2xl w-full mx-auto">
             <div class="text-center pb-5 fade-in-right">
@@ -86,7 +86,6 @@
                     narrative that molds my professional profile, revealing a fervor for continuous growth and
                     innovation.</p>
             </div>
-
             <div
                 class="bg-black p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300 fade-in">
                 <span class="text-3xl font-bold">2021-2024</span>
@@ -99,7 +98,6 @@
                 <p class="text-gray-300 mt-4">With an outstanding academic achievement.
                     successfully completed my degree in B.Sc. in IT from Uka Tarsadia University.</p>
             </div>
-
             <div
                 class="bg-black p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300 fade-in">
                 <span class="text-3xl font-bold">2019-2020</span>
@@ -109,7 +107,6 @@
                     science stream at Gujarat Secondary and Higher Secondary Board (Jeevan Bharti Educational School),
                     showcasing my strong academic performance and dedication to the field of science.</p>
             </div>
-
             <div
                 class="bg-black p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300  fade-in">
                 <span class="text-3xl font-bold">2017-2018</span>
@@ -127,7 +124,6 @@
 
     <div class="text-center mt-5 pb-5 section" id="about-section">
         <h1 class="text-5xl font-bold mb-2">About</h1>
-
         <section class="container mx-auto p-8 flex flex-col md:flex-row">
             <div class="flex-1 mb-8 md:mr-6 fade-in">
                 <div class="mb-4">
@@ -163,8 +159,6 @@
                 </div>
             </div>
         </div>
-
-
 <!-- Ethical Hacker Section -->
         <div class="flex-1 fade-in">
             <div class="mb-4">
@@ -295,7 +289,6 @@
             </div>
         </div>
     </section>
-
     <section class="ftco-section contact-section ftco-no-pb bg-black text-[#237d07]" id="contact-section">
         <div class="container">
             <!-- <div class="row justify-content-center mb-5 pb-3">
@@ -354,7 +347,6 @@
             </div> -->
             <div class="visme_d" data-title="portfolio" data-url="eprmwv11-portfolio" data-domain="forms"
                 data-full-page="false" data-min-height="500px" data-form-id="15538"></div>
-
         </div>
     </section>
 
@@ -392,11 +384,9 @@
             </div>
         </section>
     </div>
-
     <!-- <div id="toaster" class="toaster">
         <span id="toast-message" class="message"></span>
     </div> -->
-
     <script src="script.js"></script>
 </body>
 
@@ -406,7 +396,6 @@
     var form = document.getElementById("my-form");
     var submitButton = form.querySelector("button[type='submit']");
     toaster.classList.add('hidden');
-
     function showToaster(str) {
         message.innerText = str || "Success! Your message has been sent.";
         toaster.classList.remove('hidden');
@@ -434,7 +423,6 @@
             status.innerHTML = "Oops! There was a problem submitting your form";
         });
     }
-
     form.addEventListener("submit", handleSubmit);
 
     // submitButton.addEventListener("click", function () {
@@ -442,4 +430,23 @@
     // });
 </script>
 
+<!-- JSON-LD (JavaScript Object Notation for Linked Data) -->
+<script type="application/ld+json">
+    {
+       "@context": "http://schema.org",
+       "@type": "Person",
+       "name": "Kushal Pipaliya",
+       "jobTitle": "Web Developer and Ethical Hacker or Pentester",
+       "url": "https://kushalportfolio.vercel.app/",
+       "sameAs": [
+          "https://www.linkedin.com/in/kushal-pipaliya",
+          "https://www.github.com/Kushal129",
+          "https://www.instagram.com/_kushal_pipaliya/"
+       ],
+       "worksFor": "KH-Development",
+       "description": "Passionate Web Developer and Ethical Hacker and Pentester with expertise in HTML, CSS, JavaScript, C#, Java, Python, and more. Bachelor's Degree in B.Sc(IT). Excited about creating innovative digital solutions and exploring cybersecurity.",
+       "image": "img/fmy2.png",
+    }
+    </script>
+    
 </html>
