--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="canonical" href="https://kushalportfolio.vercel.app/">
+    <!-- SEO  -->
     <meta property="og:title" content="Kushal Pipaliya - Web Developer and Pentester">
+    <meta property="og:image" content="img/fmy2.png">
+    <meta property="og:url" content="https://kushalportfolio.vercel.app/">
+    <meta property="og:type" content="portfolio , website">
+    <meta property="og:site_name" content="KH.Pipaliya, kushal-portfolio">
+    <link rel="canonical" href="https://kushalportfolio.vercel.app/">
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="kushal,kushal-portfolio,KH,kushal-pipaliya,kushal-pipaliya-portfolio,web-developer, ethical-hacker, penetration ,HTML, CSS, JavaScript, cybersecurity, front-end developer, back-end developer, full-stack developer, web-design, responsive design, user experience, programming, coding, software development, web security, network security, penetration tester, white hat hacker, cybersecurity specialist, HTML5, CSS3, Bootstrap, Tailwind CSS, React, Java, C#, PHP, Python, .NET, MySQL, ASP.Net, Servlet, .NET Core, scripting, Linux, Windows, problem-solving, communication skills">
     <meta name="description" content="Explore the impressive portfolio of Kushal Pipaliya, a skilled Web Developer and Ethical Hacker. With expertise in HTML, CSS, JavaScript, C#, Java, Python, and more, I am dedicated to creating innovative digital solutions. Delve into my journey through academia, including a Bachelor's Degree in B.Sc(IT), and discover a passion for cybersecurity. View my projects in HTML/CSS/JS, C#, PHP, .Net, Java, and Python. Connect with me for collaboration and let's code something amazing together!">
     <link rel="shortcut icon"
-    href="https://t4.ftcdn.net/jpg/03/89/91/73/360_F_389917362_x1ng8JcBsm22Nq4hnYzXkDyamqb20c1o.jpg"
+    href="img/icon.jpg"
     type="image/x-icon">
+    <!-- SEO End  -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/scrollreveal@4/dist/scrollreveal.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
@@ -28,7 +34,7 @@
     <div id="loader" class="center"></div>
     <nav class="nav fixed w-full z-10 transition duration-500 ease-in-out bg-red navbar" id="navbar">
         <div class="container mx-auto flex items-center justify-between p-2">
-            <a href="#home-section" class="font-bold text-3xl text-[#237d07] hover:text-[#299f04]">KH.Pipaliya</a>
+            <a href="#home-section" class="font-bold text-3xl ml-8 text-[#237d07] hover:text-[#299f04]">KH.Pipaliya</a>
             <div class="md:hidden">
                 <button id="mobile-menu-toggle"
                     class="text-[#237d07] hover:text-[#299f04] hover:scale-110 focus:outline-none">
@@ -39,7 +45,7 @@
                     </svg>
                 </button>
             </div>
-            <div class="hidden md:flex flex-col md:flex-row md:items-center md:justify-end md:space-x-4" id="nav-links">
+            <div class="hidden md:flex text-xl flex-col md:flex-row md:items-center md:justify-end md:space-x-4" id="nav-links">
                 <a href="#home-section" class="nav-link">Home<span class="active-underline"></span></a>
                 <a href="#resume-section" class="nav-link">Resume<span class="active-underline"></span></a>
                 <a href="#about-section" class="nav-link">About<span class="active-underline"></span></a>
@@ -448,5 +454,4 @@
        "image": "img/fmy2.png",
     }
     </script>
-    
 </html>
